--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -15,7 +15,7 @@
 				<div class="alert alert-danger alert-dismissable">
 					<button type="button" class="close" data-dismiss="alert"aria-hidden="true">
 						&times;
-					</button><h4>Incorrect username or password.</h4>
+					</button><h4>Incorrect username or password. {{state}}</h4>
 				</div>
 			</div>
 		</div>
