--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -29,11 +29,11 @@
     <div class="body col-md-12">
     <div class="form-group col-md-offset-1 col-md-10">
 
-    <input type="text" class="form-control input-lg" name="username" placeholder="Username">
+    <input type="text" required="required" class="form-control input-lg" name="username" placeholder="Username">
     </div>
     <div class="form-group col-md-offset-1 col-md-10">
 
-    <input type="password" class="form-control input-lg" name="password" placeholder="Password">
+    <input type="password" required="required" class="form-control input-lg" name="password" placeholder="Password">
     </div>
     </div>
 
