--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -47,7 +47,7 @@
     </div>
 
     <footer class="white navbar-fixed-bottom">
-      Don't have an account yet? <a href="register.html" class="btn btn-black">Register</a>
+      Don't have an account yet? <a href="/reg" class="btn btn-black">Register</a>
     </footer>
 
 </body>
