--- a/views/me.handlebars
+++ b/views/me.handlebars
@@ -51,15 +51,15 @@
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                             <h4 class="modal-title" id="exampleModalLabel">New Room</h4>
                         </div>
-                        <form id="new-room" action="POST" action="/new">
+                        <form action="/new" method="POST" id="new-room" >
                             <div class="modal-body">
                                     <div class="form-group">
                                         <label for="recipient-name" class="control-label">Room Name:</label>
-                                        <input type="text" required="required" class="form-control" id="room-name">
+                                        <input type="text" required="required" class="form-control" name="name" id="room-name">
                                     </div>
                                     <div class="form-group">
                                         <label for="message-text" class="control-label">Map:</label>
-                                        <select class="form-control" id="map">
+                                        <select class="form-control" id="map" name="map">
                                             <option>Forest</option>
                                         </select>
                                     </div>
