--- a/views/me.handlebars
+++ b/views/me.handlebars
@@ -5,6 +5,8 @@
     <title>Register Fun Run Web</title>
 
     <link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/messenger.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/messenger-theme-future.css">
 </head>
 <body>
 <nav class="navbar navbar-default navbar-fixed-top navbar-inverse">
@@ -37,9 +39,12 @@
 </nav>
 <br />
 <br /><br />
-<br /><br />
-<br />
+
+
 <div class="container">
+    <ol class="breadcrumb">
+        <li><a href="#">Home</a></li>
+    </ol>
     <div class="row">
         <div class="col-xs-offset-2 col-xs-8 ">
             <button type="button" class="btn btn-primary btn-lg center-block btn-block" data-toggle="modal" data-target="#exampleModal" data-whatever="/new">Open A New Room</button>
@@ -109,6 +114,8 @@
 </body>
 <script src="/javascripts/jquery.min.js"></script>
 <script src="/javascripts/bootstrap.min.js"></script>
+<script src="/javascripts/messenger.min.js"></script>
+<script src="/javascripts/messenger-theme-future.js"></script>
 <script src="/javascripts/me.js"></script>
 </html>
 
