--- a/views/scores.handlebars
+++ b/views/scores.handlebars
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.min.css">
 </head>
 <body>
+
 <nav class="navbar navbar-default navbar-fixed-top navbar-inverse">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -31,9 +32,12 @@
 </nav>
 <br />
 <br /><br />
-<br /><br />
-<br />
+
 <div class="container">
+    <ol class="breadcrumb">
+        <li><a href="/me">Home</a></li>
+        <li><a href="#">ScoreBoard</a></li>
+    </ol>
     <div class="row">
         <div class="col-xs-10 col-xs-offset-1">
             <table class="table">
