--- a/views/game.handlebars
+++ b/views/game.handlebars
@@ -53,6 +53,11 @@
         </div>
         <div class="col-xs-3">
             <div class="row">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        <a type="button" class="btn btn-danger col-xs-12" id="exit">Exit</a>
+                    </div>
+                </div>
                 <div class="panel panel-warning">
                     <div class="panel-heading">Player List</div>
                     <div class="panel-body">
@@ -88,6 +93,7 @@
 <script src="/javascripts/bootstrap.min.js"></script>
 <script src="/javascripts/messenger.min.js"></script>
 <script src="/javascripts/messenger-theme-future.js"></script>
+<script src="/socket.io/socket.io.js"></script>
 <script src="/javascripts/game.js"></script>
 </html>
 
