--- a/views/me.handlebars
+++ b/views/me.handlebars
@@ -82,7 +82,7 @@
     </div>
     <div class="row">
         <div class="col-xs-offset-2 col-xs-8 ">
-            <a type="button" href="/pick" class="btn btn-warning btn-lg center-block btn-block">Pick A Room</a>
+            <a id="pickRoom" type="button" href="/pick" class="btn btn-warning btn-lg center-block btn-block">Pick A Room</a>
             <br /><br /><br />
         </div>
     </div>
