--- a/views/game.handlebars
+++ b/views/game.handlebars
@@ -61,7 +61,7 @@
                 <div class="panel panel-warning">
                     <div class="panel-heading">Player List</div>
                     <div class="panel-body">
-                        <ul class="nav nav-pills nav-stacked">
+                        <ul class="nav nav-pills nav-stacked" id="players">
                             <li role="presentation" class="active">
                                 <h3><span class="label label-primary">{{me.username}} <span class="glyphicon glyphicon-user" aria-hidden="true"></span></span></h3>
                             </li>
