--- a/views/game.handlebars
+++ b/views/game.handlebars
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/messenger.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/messenger-theme-future.css">
+    <script src="/javascripts/phaser.min.js"></script>
 </head>
 <body>
 
@@ -48,8 +49,8 @@
         <li><a href="#">{{roomInfo.roomName}}</a></li>
     </ol>
     <div class="row">
-        <div class="col-xs-9">
-
+        <div id="gameScreen" class="col-xs-9">
+            <script src="/javascripts/funrun.js"></script>
         </div>
         <div class="col-xs-3">
             <div class="row">
