--- a/views/game.handlebars
+++ b/views/game.handlebars
@@ -50,12 +50,15 @@
     </ol>
     <div class="row">
         <div id="gameScreen" class="col-xs-9">
-            <script src="/javascripts/funrun.js"></script>
         </div>
         <div class="col-xs-3">
             <div class="row">
                 <div class="panel panel-default">
                     <div class="panel-body">
+                        <button type="button" id="readyButton" data-loading-text="Wait for others..." class="btn btn-success col-xs-12" autocomplete="off">
+                            Ready
+                        </button>
+                        <br /><br />
                         <a type="button" class="btn btn-danger col-xs-12" id="exit">Exit</a>
                     </div>
                 </div>
