--- a/views/game.handlebars
+++ b/views/game.handlebars
@@ -93,6 +93,15 @@
         </div>
     </div>
 </div>
+
+<div class="modal fade bs-example-modal-lg" id="myModal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <h1 class="text-center">Game Start in <strong id="seconds">5</strong> Seconds.</h1>
+        </div>
+    </div>
+</div>
+
 </body>
 <script src="/javascripts/jquery.min.js"></script>
 <script src="/javascripts/bootstrap.min.js"></script>
