--- a/views/game.handlebars
+++ b/views/game.handlebars
@@ -7,7 +7,6 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/messenger.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/messenger-theme-future.css">
-    <script src="/javascripts/phaser.min.js"></script>
 </head>
 <body>
 
@@ -49,7 +48,7 @@
         <li><a href="#">{{roomInfo.roomName}}</a></li>
     </ol>
     <div class="row">
-        <div id="gameScreen" class="col-xs-9">
+        <div id="game" class="col-xs-9">
         </div>
         <div class="col-xs-3">
             <div class="row">
@@ -103,12 +102,13 @@
 </div>
 
 </body>
+<script src="/javascripts/phaser.min.js"></script>
 <script src="/javascripts/jquery.min.js"></script>
 <script src="/javascripts/bootstrap.min.js"></script>
 <script src="/javascripts/messenger.min.js"></script>
 <script src="/javascripts/messenger-theme-future.js"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="/javascripts/game.js"></script>
+<script src="/javascripts/funrun.js"></script>
 </html>
 
 
