--- a/views/game.handlebars
+++ b/views/game.handlebars
@@ -45,6 +45,7 @@
     <ol class="breadcrumb">
         <li><a href="/me">Home</a></li>
         <li><a href="#">{{roomInfo.roomName}}</a></li>
+        <li><a href="#" id="mapName">{{roomInfo.roomMap}}</a></li>
     </ol>
     <div class="row">
         <div id="game" class="col-xs-9">
