--- a/views/me.handlebars
+++ b/views/me.handlebars
@@ -65,7 +65,8 @@
                                     <div class="form-group">
                                         <label for="message-text" class="control-label">Map:</label>
                                         <select class="form-control" id="map" name="map">
-                                            <option>Forest</option>
+                                            <option>Forest 1</option>
+                                            <option>Forest 2</option>
                                         </select>
                                     </div>
                             </div>
